fix: change current date to present

--- a/templates/basic/index.html
+++ b/templates/basic/index.html
@@ -161,7 +161,7 @@
                   {{ edu.title }}
                 </span>
                 <span>
-                  {{ edu.start_date }} - {{ edu.end_date if edu.end_date else "current" }}
+                  {{ edu.start_date }} - {{ edu.end_date if edu.end_date else "Present" }}
                 </span>
               </div>
               <div class="eduInstitution">
@@ -190,7 +190,7 @@
                   {{ experience.title }}
                 </span>
                 <span>
-                  {{ experience.start_date }} - {{ experience.end_date if experience.end_date else "current" }}
+                  {{ experience.start_date }} - {{ experience.end_date if experience.end_date else "Present" }}
                 </span>
               </div>
               <div class="projectName">
